content/_generated-doc/2.7/config/quarkus-vertx-http-config-group-cors-cors-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-http-config-group-cors-cors-config_configuration]]link:#quarkus-vertx-http-config-group-cors-cors-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.origins]]`link:#quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.origins[quarkus.http.cors.origins]`

[.description]
--
Origins allowed for CORS Comma separated list of valid URLs. ex: http://www.quarkus.io,http://localhost:3000 The filter allows any origin if this is not set. default: returns any requested origin as valid
--|list of string 
|


a| [[quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.methods]]`link:#quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.methods[quarkus.http.cors.methods]`

[.description]
--
HTTP methods allowed for CORS Comma separated list of valid methods. ex: GET,PUT,POST The filter allows any method if this is not set. default: returns any requested method as valid
--|list of string 
|


a| [[quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.headers]]`link:#quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.headers[quarkus.http.cors.headers]`

[.description]
--
HTTP headers allowed for CORS Comma separated list of valid headers. ex: X-Custom,Content-Disposition The filter allows any header if this is not set. default: returns any requested header as valid
--|list of string 
|


a| [[quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.exposed-headers]]`link:#quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.exposed-headers[quarkus.http.cors.exposed-headers]`

[.description]
--
HTTP headers exposed in CORS Comma separated list of valid headers. ex: X-Custom,Content-Disposition default: empty
--|list of string 
|


a| [[quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.access-control-max-age]]`link:#quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.access-control-max-age[quarkus.http.cors.access-control-max-age]`

[.description]
--
The `Access-Control-Max-Age` response header value indicating how long the results of a pre-flight request can be cached.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.access-control-allow-credentials]]`link:#quarkus-vertx-http-config-group-cors-cors-config_quarkus.http.cors.access-control-allow-credentials[quarkus.http.cors.access-control-allow-credentials]`

[.description]
--
The `Access-Control-Allow-Credentials` header is used to tell the browsers to expose the response to front-end JavaScript code when the request’s credentials mode Request.credentials is “include”. The value of this header will default to `true` if `quarkus.http.cors.origins` property is set and there is a match with the precise `Origin` header and that header is not '++*++'.
--|boolean 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
